--- a/templates/account-activated.html
+++ b/templates/account-activated.html
@@ -119,7 +119,7 @@
             </div>
             
             <div style="text-align: center;">
-                <a href="{{frontendUrl}}/dashboard" class="cta-button">Accéder à votre tableau de bord</a>
+                <a href="{{loginUrl}}" class="cta-button">Se connecter à votre compte</a>
             </div>
         </div>
         
